--- a/src/App.css
+++ b/src/App.css
@@ -77,32 +77,35 @@
 }
 
 .canvas-sections h1 {
-  padding-top: 5px;
-  padding-bottom: 2px;
+  padding-top: 1rem;
 }
 
 .canvas-and-p1 {
   display: flex;
-  padding: 5px;
+  padding: 2rem;
+  gap: 1rem;
   align-items: center;
 }
 
 .canvas-and-p2 {
   display: flex;
-  padding: 5px;
+  padding: 2rem;
+  gap: 1rem;
   align-items: center;
   flex-direction: row-reverse;
 }
 
 .canvas-and-p3 {
   display: flex;
-  padding: 5px;
+  padding: 2rem;
+  gap: 1rem;
   align-items: center;
 }
 
 .canvas-and-p4 {
   display: flex;
-  padding: 5px;
+  padding: 2rem;
+  gap: 1rem;
   align-items: center;
   flex-direction: row-reverse;
 }
